# MeltBot

./: .gitignore  config.py  gamble.sqlite  main.py  prefix.sqlite  pyproject.toml  remind.sqlite  utils.py
cogs/: admin.py  basic.py  fight.py  gacha.py  interactive.py  misc.py  probability.py  raid.py  time.py  tts.py
