[tool.poetry]
name = "MeltBot"
version = "0.1.0"
description = "Your favorite Alter Ego, now as a bot. [under development]"
authors = ["nara"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^3.0.0"
discord-pretty-help = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
